--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -5,7 +5,7 @@
             <i class="fas fa-bars"></i>
         </button>
         
-        <a href="/admin/dashboard.html" class="site-logo">LGCMS Admin</a>
+        <a href="/admin/dashboard.html" class="site-logo">Local Goverment Complaints Management System(LGCMS)</a>
         
         <!-- User/Admin Info (Optional - can be loaded via JS or part of common header) -->
         <div class="user-info">
